# warchief

./: .gitignore  CHANGELOG.md  CLAUDE.md  DA-grouped-tasks-plan.md  DA-unified-orchestrator-plan.md  LICENSE  PROGRESS.md  README.md  app.py  project-analysis-resolution.md  pyproject.toml  release.sh  test_app.py
.github/workflows/: ci.yml
docs/: copilot-design.md  plugin-system-design.md
eval/: __init__.py  runner.py
eval/test_cases/: conductor_decomposition.json  integrator_merge.json  reviewer_approval.json  security_reviewer.json
pipelines/: default.toml  investigation.toml
prompts/: challenger.md  conductor.md  developer.md  integrator.md  investigator.md  planner.md  pr_creator.md  reviewer.md  security_reviewer.md  tester.md  visual_ios.md  visual_web.md
tests/: conftest.py  test_agent_log_writer.py  test_backup.py  test_board.py  test_communication.py  test_conductor.py  test_config.py  test_cost_tracker.py  test_daemon.py  test_dashboard.py  test_diagnostics.py  test_doctor.py  test_e2e.py  test_eval.py  test_feed.py  test_group_pipeline.py  test_handoff.py  test_heartbeat.py  test_hooks.py  test_log_rotation.py  test_mcp_discovery.py  test_merge_verifier.py  test_metrics.py  test_observability.py  test_pipeline_checker.py  test_pipeline_template.py  test_preflight.py  test_prime.py  test_questions.py  test_recovery.py  test_roles.py  test_scheduler.py  test_sessions.py  test_spawner.py  test_state_machine.py  test_task_store.py  test_test_runner.py  test_watcher.py  test_web_app.py  test_worktree.py
warchief/: __init__.py  __main__.py  agent_log_writer.py  agent_monitor.py  backup.py  board.py  communication.py  conductor.py  config.py  control.py  cost_tracker.py  daemon.py  dashboard.py  diagnostics.py  doctor.py  feed.py  handoff.py  heartbeat.py  hooks.py  log_rotation.py  mcp_discovery.py  merge_verifier.py  metrics.py  models.py  observability.py  pipeline_checker.py  pipeline_template.py  preflight.py  prime.py  project_context.py  recovery.py  scheduler.py  scratchpad.py  sessions.py  spawner.py  state_machine.py  task_store.py  test_runner.py  tmux_ui.py  watcher.py  (+1 more)
warchief/roles/: __init__.py  challenger.toml  conductor.toml  developer.toml  integrator.toml  investigator.toml  planner.toml  pr_creator.toml  reviewer.toml  security_reviewer.toml  tester.toml
warchief/web/: app.py
warchief/web/frontend/: index.html  package-lock.json  vite.config.js
warchief/web/frontend/src/: App.vue  router.js  style.css
warchief/web/frontend/src/components/: AgentPanel.vue  (+7 more)
warchief/web/static/: agents.html  index.html  tasks.html
warchief/web/static/assets/: index-BC7MGL1y.css  index-BENCGZPe.js  index-BYgtezj4.css  index-Ck1KzCWo.css  index-Cm6Bn1a_.js  index-DKCMk2Ov.js  index-Dm6PG8h5.js  index-jwZAEptn.css
(+5 files in other folders)
