[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warchief-orchestrator"
version = "2026.3.13.1"
description = "Warchief — AI Agent Orchestration Framework. Command your coding agents like a true Warchief."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
ui = ["rich>=13.0", "watchdog>=3.0", "textual>=0.50"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4", "mypy>=1.10"]
web = ["fastapi>=0.104", "uvicorn[standard]>=0.24", "websockets>=12.0"]

[project.scripts]
warchief = "warchief.__main__:main"
wc = "warchief.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
warchief = ["roles/*.toml", "tui/*.css", "web/static/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
