[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warchief-orchestrator"
version = "0.6.0"
description = "WoW-themed AI agent orchestration framework for Claude Code CLI. Coordinates parallel coding agents through automated pipelines."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []
authors = [
    {name = "Denis Jersov", email = "denisasjersovas@gmail.com"},
]
keywords = ["ai", "agents", "orchestration", "claude", "automation", "multi-agent", "pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/DenisJer/warchief"
Repository = "https://github.com/DenisJer/warchief"
Issues = "https://github.com/DenisJer/warchief/issues"

[project.optional-dependencies]
ui = ["rich>=13.0", "watchdog>=3.0", "textual>=0.50"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4", "mypy>=1.10"]
web = ["fastapi>=0.104", "uvicorn[standard]>=0.24", "websockets>=12.0"]

[project.scripts]
warchief = "warchief.__main__:main"
wc = "warchief.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
warchief = ["roles/*.toml", "tui/*.css", "web/static/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
